ProjetCompil/Gencode/Test/success/src/int.cas
program
	i : 1..max_int;
begin
	i := max_int;
	write(i);
end.
