ProjetCompil/Gencode/Test/fail/src/divZero.cas
program
    J : 0 .. 5;
	K : real;
begin
    K := 10 ;
	J := 0 ;
	K := K/J;
end.